2006-12-13  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/elem.scm
	  #f is simply ignored in content of node(element).
	  ex. ((div/ #f (p/ "hoge")) '()) => ((div (p "hoge")))
	      (div: #f (p: "hoge"))       => (div (p "hoge"))

	* Change: src/kahua/elem.scm
	  Drop obj->string and html:element?.  If you'd like to change a object
	  appearance in SXML, just use x->string.
	  

	* Fix: doc/Modules/kahua.elem.ja
	  Tagged empty and get as [constant] instead of [procedure] or [variable].

2006-12-13  Katsutoshi Itoh  <cut-sea@kahua.org>

	* Add explanation of !contain for doc/Module/kahua.test.xml.ja.

2006-12-12  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: (src/kahua/server.scm):
	  Escape characters #\< #\> #\' #\" #\& in attribute value.

	* Add XML page template engine.

	  (define tmpl (kahua:make-xml-template path-to-tmplfile)
	  (kahua:xml-template->sxml tmpl :id1 (p/ "fugafuga") :id2 (p/ "hogehoge"))

2006-12-02  Tatsuya BIZENN  <bizenn@arthub.net>

	* Now we deprecate kahua.persistece.fs.  It was taken away from test
	  suites.  You should convert your fs data into kahua.persistence.efs
	  like this:

	  % kahua-dbutil upgrade <path-to-fsdb>

	  Note that this is in-place conversion.  Please keep its backup data
	  before this.

	  % cp -pR <path-to-fsdb> /tmp/backup-db

	* Before find-kahua-instance/make-kahua-collection with index value
	  Kahua invoke ensure-metainfo to sync index slot structure on-memory
	  and on-storage.

	* Fix cache handling strategy.

2006-11-28  Tatsuya BIZENN  <bizenn@arthub.net>

	* find-kahua-instance now can take index slot name(it must be
	  "unique" index) and its value like this:
	  (find-kahua-instance <a-class> unique-index-slot-nae value)

	* Now database name that has no prefix(like "efs:" or "mysql")
	  handled as efsdb path.

	* Fix that test/admin.scm and test/shell.scm depended
	  on cvs command.

	* Now PostgreSQL driver support index slot feature.

2006-11-27  Tatsuya BIZENN  <bizenn@arthub.net>
