@@ -1,5 +1,8 @@
 2006-12-13  Tatsuya BIZENN  <bizenn@arthub.net>
 
+	* Add: src/kahua/elem.scm
+	  New virtual node: when/ unless/ and when: unless:
+
 	* Change: src/kahua/elem.scm
 	  #f is simply ignored in content of node(element).
 	  ex. ((div/ #f (p/ "hoge")) '()) => ((div (p "hoge")))
